fixed name of nowrap class

--- a/src/components/typography/style.less
+++ b/src/components/typography/style.less
@@ -161,7 +161,7 @@ del {
     &--center {
         text-align: center;
     }
-    &--norwap {
+    &--nowrap {
         white-space: nowrap;
     }
 }
